# career-engineering-framework

./: README.md  pyproject.toml  requirements.txt
docs/01-product/: README.md  documentation-guidelines.md  founder-notes.md  mission.md  problem-statement.md  project-principles.md  vision.md
docs/adr/: ADR-001 Career Profile as Source of Truth.md
docs/architecture/: mvp-architecture.md
docs/insights/: 2026-07-15-extraction-contract-design.md  2026-07-15-llm-transport-layer.md
docs/sprints/: sprint-1-review.md
src/: main.py  streamlit_app.py
src/career_engine/: __init__.py  llm_client.py  pipeline.py
src/career_engine/extraction/: __init__.py  extractor.py
src/career_engine/generation/: __init__.py  cv_generator.py
src/career_engine/ingestion/: __init__.py  loader.py
src/career_engine/profile/: __init__.py  models.py  serialization.py
src/career_engine/prompts/: __init__.py  career_profile_prompt.md
tests/: test_extraction.py  test_generation.py  test_ingestion.py
